--- a/web/index.html
+++ b/web/index.html
@@ -17,15 +17,15 @@
 
     <h1>Shadow Hunter</h1>
 
+    <div id="over">Game Over</div>
+    <div id="start">Tip somewhere to start</div>
+
     <div id="qr">
         This seems to be a desktop browser.
         Please, play this game with your mobile browser.
         <br><br>
         <img src="qr.png" />
     </div>
-
-    <div id="over">Game Over</div>
-    <div id="start">Tip to start</div>
 
     <div id="area"></div>
     <div id="ball"></div>
