--- a/web/index.html
+++ b/web/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="scaffolded-by" content="https://github.com/google/stagehand">
     <title>dartmotion</title>
     <link rel="stylesheet" href="styles.css">
