--- a/web/index.html
+++ b/web/index.html
@@ -2,16 +2,17 @@
 
 <html>
 <head>
+    <link rel="manifest" href="manifest.json" />
+    <meta name="theme-color" content="#ffffff" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="scaffolded-by" content="https://github.com/google/stagehand">
-    <title>dartmotion</title>
+    <title>Shadow Hunter (Dart in motion)</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="../../../bitbucket/nkode.io-html5up/assets/webtech/demos/motion/favicon.ico">
     <script defer src="main.dart" type="application/dart"></script>
-    <script defer src="../../../bitbucket/nkode.io-html5up/assets/webtech/demos/motion/packages/browser/dart.js"></script>
+    <script defer src="packages/browser/dart.js"></script>
 </head>
 
 <body>
