--- a/web/index.html
+++ b/web/index.html
@@ -3,10 +3,9 @@
 <html>
 <head>
     <link rel="manifest" href="manifest.json" />
-    <meta name="theme-color" content="#ffffff" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="scaffolded-by" content="https://github.com/google/stagehand">
     <title>Shadow Hunter (Dart in motion)</title>
