--- a/web/index.html
+++ b/web/index.html
@@ -10,8 +10,7 @@
     <meta name="scaffolded-by" content="https://github.com/google/stagehand">
     <title>Shadow Hunter (Dart in motion)</title>
     <link rel="stylesheet" href="styles.css">
-    <script defer src="main.dart" type="application/dart"></script>
-    <script defer src="packages/browser/dart.js"></script>
+    <script defer src="main.dart.js" ></script>
 </head>
 
 <body>
